--- a/public/css/welcomePage.css
+++ b/public/css/welcomePage.css
@@ -1,6 +1,5 @@
-
 #intro {
-    background: #151515 url(../intro-bg.jpg) no-repeat center bottom;
+    background: #151515 url(../images/welcomePageBG.jpg) no-repeat center bottom;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
